# ARC-phash

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pipeline.py  pyproject.toml
notebooks/: phash_dev.ipynb
src/arc_phash/: __init__.py
src/arc_phash/ai_detection/: README.md  detector.py  run_detection.py
src/arc_phash/data_generation/: README.md  draw_masks.py  flip_images.py  perform_inpainting.py  transform_images.py
src/arc_phash/database_admin/: gen_data_dicts.py
src/arc_phash/hashing/: dhash.py  pdqhash.py
src/arc_phash/image_manipulation/: utils.py
src/arc_phash/image_manipulation/deepfake/: img2img.py  inpaint.py  utils.py
