[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ARC-phash"
version = "0.1.0"
authors = [
  { name = "Edmund Dable-Heath", email = "edable-heath@turing.ac.uk" },
]
description = "An investigatory repo exploring the relationship between perceptual hashing and in-painting"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "diffusers[torch]>=0.32.2",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/alan-turing-institute/ARC-phash"
"Bug Tracker" = "https://github.com/alan-turing-institute/ARC-phash/issues"
Discussions = "https://github.com/alan-turing-institute/ARC-phash/discussions"
Changelog = "https://github.com/alan-turing-institute/ARC-phash/releases"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
